# AxionFlow

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES.md  LICENSE  PLUGINS.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  publish.yml  tests.yml  visual-sync.yml
akita/cli/: main.py
akita/core/: ast_utils.py  config.py  plugins.py
akita/models/: base.py
akita/plugins/: __init__.py  files.py
akita/reasoning/: engine.py
akita/schemas/: review.py
akita/tools/: base.py  context.py  diff.py
axion/cli/: doctor.py  main.py
axion/core/: config.py  i18n.py  indexing.py  plugins.py  trace.py
axion/models/: base.py
axion/plugins/: __init__.py  files.py
axion/plugins/automode/: __init__.py  plugin.py
axion/plugins/council/: __init__.py  plugin.py
axion/reasoning/: engine.py  session.py
axion/tools/: context.py  diff.py  git.py
docs/: context.md  index.md  installation.md  interactive.md  plugins.md  roadmap.md
scripts/: visual_sync_analyzer.py
tests/: test_ast.py  test_basic.py  test_interactive.py  test_plugins.py  test_review_mock.py
