[project]
name = "akitallm"
version = "1.1.0"
description = "AkitaLLM: An open-source local-first AI system for programming."
authors = [{ name = "KerubinDev" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["ai", "cli", "programming", "local-first", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "typer[all]",
    "litellm",
    "pydantic",
    "rich",
    "python-dotenv",
    "pytest",
    "pytest-mock",
    "gitpython",
    "tomli-w",
    "tomli",
    "whatthepatch>=1.0.5",
    "tree-sitter>=0.21.3",
    "tree-sitter-python>=0.21.0"
]

[project.urls]
Homepage = "https://github.com/KerubinDev/AkitaLLM"
Repository = "https://github.com/KerubinDev/AkitaLLM"
Issues = "https://github.com/KerubinDev/AkitaLLM/issues"

[project.scripts]
akita = "akita.cli.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.entry-points."akitallm.plugins"]
files = "akita.plugins.files:FilesPlugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
